[package]
name = "actix-web-queryst"
version = "0.1.0"
authors = ["Pouya M. B. <pooyamb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1"
serde_json = "1"
actix-web = "3"
derive_more = "0.99"
queryst = "2"
log = "0.4"

[dev-dependencies]
actix-rt = "1.1"
